[project]
name = "hypergraph-presentation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "hypergraph",
    "ipykernel>=7.1.0",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
hypergraph = { git = "https://github.com/gilad-rubin/hypergraph.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]